Archive2/47/9df183ffac90b5/output
main.cpp: In function 'int main()':
main.cpp:54:23: error: 'mem_fn' is not a member of 'std'
     bubblesort(table, std::mem_fn(&Person::fullname));
                       ^
main.cpp:57:23: error: 'mem_fn' is not a member of 'std'
     bubblesort(table, std::mem_fn(&Person::age));
                       ^
